--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-symbols": "^0.17.1",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
@@ -37,6 +38,7 @@
     "@iconify/react": "^4.1.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
